...
import com.github.meeplemeet.ui.navigation.MeepleMeetScreen
import com.github.meeplemeet.ui.navigation.NavigationTestTags
import com.github.meeplemeet.ui.theme.AppColors
import kotlinx.coroutines.launch

object AddDiscussionTestTags {
  const val ADD_TITLE = "Add Title"
  const val ADD_DESCRIPTION = "Add Description"
  const val ADD_MEMBERS = "Add Members"
  const val CREATE_DISCUSSION_BUTTON = "Create Discussion"
  const val ADD_MEMBERS_ELEMENT = "Add Member Element"

  const val DISCARD_BUTTON = "Discard Button"
}

/**
...
